added Opal into this project.

--- a/src/playground/index.ejs
+++ b/src/playground/index.ejs
@@ -14,8 +14,8 @@
         </script>
         <!-- /Sentry -->
     <% } %>
-    <script src="//cdn.opalrb.com/opal/current/opal.min.js"></script>
-    <script src="//cdn.opalrb.com/opal/current/opal-parser.min.js"></script>
+    <script src="static/javascripts/opal.min.js"></script>
+    <script src="static/javascripts/opal-parser.min.js"></script>
   </head>
   <body>
   </body>
