--- a/src/playground/index.ejs
+++ b/src/playground/index.ejs
@@ -14,9 +14,14 @@
         </script>
         <!-- /Sentry -->
     <% } %>
-    <script src="static/javascripts/opal.min.js" onload="Opal.load('opal')"></script>
+    <script src="static/javascripts/opal.min.js"
+            onload="Opal.load('opal');
+                    Opal.config.unsupported_features_severity = 'ignore';">
+    </script>
     <script src="static/javascripts/opal-parser.min.js"
-            onload="Opal.load('opal-parser'); Opal.load('parser'); Opal.load('parser/ruby23');
+            onload="Opal.load('opal-parser');
+                    Opal.load('parser');
+                    Opal.load('parser/ruby23');
                     Opal.Parser.CurrentRuby = Opal.Parser.Ruby23;">
     </script>
   </head>
