--- a/src/components/question/question.css
+++ b/src/components/question/question.css
@@ -66,7 +66,7 @@
 .question-submit-button-icon {
     width: calc(2rem - $space);
     height: calc(2rem - $space);
-    position: relative;
-    right: -7px;
-    left: -7px;
+    position: absolute;
+    left: 0;
+    top: 0;
 }
