--- a/src/components/blocks/blocks.css
+++ b/src/components/blocks/blocks.css
@@ -74,7 +74,7 @@
 }
 
 
-.blocks :global(.blocklyBlockDragSurface) {
+.blocks :global(.blocklyDraggingMouseThrough) {
     /*
         Fix an issue where the drag surface was preventing hover events for sharing blocks.
         This does not prevent user interaction on the blocks themselves.
