--- a/src/components/context-menu/context-menu.css
+++ b/src/components/context-menu/context-menu.css
@@ -29,10 +29,10 @@
     color: white;
 }
 
-.menu-item-bordered {
+.menu-item-bordered, .menu-item-danger {
     border-top: 1px solid $ui-black-transparent;
 }
 
-.menu-item-bordered:hover {
+.menu-item-danger:hover {
     background: $error-primary;
 }
