--- a/src/components/stage/stage.css
+++ b/src/components/stage/stage.css
@@ -106,9 +106,19 @@ to adjust for the border using a different method */
     position: absolute;
     top: 0;
     left: 0;
-    z-index: $z-index-dragging-sprite;
     filter: drop-shadow(5px 5px 5px $ui-black-transparent);
- }
+}
+
+.dragging-sprite-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    pointer-events: none;
+    z-index: $z-index-dragging-sprite;
+}
 
 .stage-bottom-wrapper {
     position: absolute;
