--- a/src/components/audio-trimmer/audio-selector.css
+++ b/src/components/audio-trimmer/audio-selector.css
@@ -12,6 +12,7 @@ $hover-scale: 2;
     left: 0;
     width: 100%;
     height: 100%;
+    cursor: pointer;
 
     /* Force the browser to paint separately to avoid composite cost with waveform */
     transform: translateZ(0);
