--- a/src/components/icon-button/icon-button.css
+++ b/src/components/icon-button/icon-button.css
@@ -8,6 +8,7 @@
     font-size: 0.75rem;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: $motion-primary;
+    border-radius: 0.5rem;
 }
 
 .container + .container {
@@ -21,4 +22,8 @@
 .disabled {
     opacity: 0.5;
     pointer-events: none;
+}
+
+.container:active {
+    background-color: $motion-transparent;
 }
