--- a/src/components/sound-editor/sound-editor.css
+++ b/src/components/sound-editor/sound-editor.css
@@ -150,6 +150,23 @@ $border-radius: 0.25rem;
     margin-bottom: -0.375rem;
 }
 
+.tool-button {
+    flex-basis: 60px;
+    color: $text-primary;
+    font-size: 0.625rem;
+    user-select: none;
+}
+
+.tool-button + .tool-button {
+    margin: 0;
+}
+
+.tool-button img {
+    width: 4rem;
+    height: 1.25rem;
+    margin-bottom: -0.375rem;
+}
+
 /* mirror the louder/softer speaker icons when rtl */
 [dir="rtl"] .effect-button:nth-of-type(6) img {
     transform: scaleX(-1);
