--- a/src/components/menu-bar/menu-bar.css
+++ b/src/components/menu-bar/menu-bar.css
@@ -39,7 +39,9 @@
     align-items: center;
     flex-grow: 1;
 }
-
+.ishidlanlge {
+    display: none;
+}
 .scratch-logo {
     height:  1.6rem;
     vertical-align: middle;
@@ -217,4 +219,9 @@
 
 .mystuff > a {
   background-image: url("/images/mystuff.png");
+}
+
+.lanageIconL {
+    float: right;
+    line-height: 35px;
 }
