--- a/src/playground/index.ejs
+++ b/src/playground/index.ejs
@@ -14,16 +14,7 @@
         </script>
         <!-- /Sentry -->
     <% } %>
-    <script src="static/javascripts/opal.min.js"
-            onload="Opal.load('opal');
-                    Opal.config.unsupported_features_severity = 'ignore';">
-    </script>
-    <script src="static/javascripts/opal-parser.min.js"
-            onload="Opal.load('opal-parser');
-                    Opal.load('parser');
-                    Opal.load('parser/ruby23');
-                    Opal.Parser.CurrentRuby = Opal.Parser.Ruby23;">
-    </script>
+    <script src="static/javascripts/setup-opal.js"></script>
   </head>
   <body>
   </body>
