Implement file upload (#2)
* Added data file parser and added functionality to send file data to VM

* Added remove and web file functions

--- a/src/components/action-menu/action-menu.css
+++ b/src/components/action-menu/action-menu.css
@@ -123,6 +123,11 @@ button::-moz-focus-inner {
     height: calc($more-button-size - 1rem);
 }
 
+.more-icon-smaller {
+    width: calc($more-button-size - 1.25rem);
+    height: calc($more-button-size - 1.25rem);
+}
+
 .coming-soon .more-icon {
     opacity: 0.5;
 }
