Add lovot brand color

--- a/src/css/colors.css
+++ b/src/css/colors.css
@@ -42,3 +42,15 @@ $extensions-transparent: hsla(163, 85%, 40%, 0.35); /* 35% transparent version o
 $extensions-light: hsla(163, 57%, 85%, 1); /* opaque version of extensions-transparent, on white bg */
 
 $drop-highlight: hsla(215, 100%, 77%); /* lighter than motion-primary */
+
+/* lovot color */
+$lovot-brand-color: hsla(15, 100%, 71%, 1); /* #FF8E69 */
+$groovex-white: hsla(0, 0%, 100%, 1); /* #FFFFFF */
+$groovex-black: hsla(0, 0%, 0%, 1); /* #000000 */
+
+$lovot-subcolor-blue: hsla(205, 47%, 57%, 1); /* #5F9BC6 */
+$lovot-subcolor-yellow: hsla(42, 80%, 61%, 1); /* #EBBC4E */
+$lovot-subcolor-green: 	hsla(108, 16%, 50%, 1); /* #74956C */
+$lovot-subcolor-pink: hsla(2, 76%, 75%, 1); /* #F09491 */
+$lovot-subcolor-violet: hsla(259, 22%, 59%, 1); /* #8E7FAE */
+$lovot-subcolor-brown: hsla(14, 10%, 34%, 1); /* #5E514D */
