feat: i18n error message when converting ruby to block.

--- a/src/playground/index.ejs
+++ b/src/playground/index.ejs
@@ -19,6 +19,15 @@
         <!-- /Sentry -->
     <% } %>
     <script src="static/javascripts/setup-opal.js"></script>
+    <style type="text/css">
+        <!--
+        .ruby-error {
+            background-color: pink;
+            position: absolute;
+            z-index: 3;
+        }
+        -->
+    </style>
   </head>
   <body>
   </body>
